bevy_elf_macros/tests/ui/fail/empty_field_attr.stderr
error: expected attribute arguments in parentheses: #[elf(...)]
 --> tests/ui/fail/empty_field_attr.rs:6:7
  |
6 |     #[elf]
  |       ^^^
